...
import UIKit

class MenuCollectionView: UICollectionView {
    
    weak var homeControllerDelegate: ArticlesMovementDelegate?
    
    private let nameCategoryArray = ["Wall St.", "Apple", "TechCrunch", "Business", "Tesla", "Bitcoin", "BBC"]
    
    private let underlineView: UIView = {
        let view = UIView()
        view.backgroundColor = .black
        view.alpha = 0
        return view
...
