/* 
  Localizable.strings
  Business NEWs

  Created by Mac on 22.09.2023.
  
*/

"Saved" = "Saved";
"Home" = "Home";
"Settings" = "Settings";
"Error" = "Error";
"Cancel" = "Cancel";
"URL is nil." = "URL is nil.";
"Response returned with no data to decode." = "Response returned with no data to decode.";
"Response is nil." = "Response is nil.";
"You need to take additional steps to fulfill the request." = "You need to take additional steps to fulfill the request.";
"You need to be authenticated first." = "You need to be authenticated first.";
"Bad request." = "Bad request.";
"Unknown response code status." = "Unknown response code status.";
"We could't decode the response." = "We could't decode the response.";
"The Internet connection appears to be offline." = "The Internet connection appears to be offline.";
