...
    }()

    override func viewDidLoad() {
        super.viewDidLoad()
        
        navigationController?.navigationBar.barTintColor = .white
        navigationItem.title = "Search"
        
        
        searchBar.delegate = self
        
        
        setUpHistoryView()
...
