...
        let flowLayout = UICollectionViewFlowLayout()
        let collectinView = UICollectionView(frame: .zero, collectionViewLayout: flowLayout)
        flowLayout.headerReferenceSize = CGSize(width: collectinView.frame.size.width, height: 75)
        return collectinView
    }()
    
    private let historyTableView = HistoryTableView()
    private var containerView: UIView!
    
    private var heightAnchorDown: NSLayoutConstraint?
    private var heightAnchorUp: NSLayoutConstraint?
    
    private lazy var searchBar:UISearchBar = {
...
        searchBar.delegate = self
        searchResultCollectioView.delegate = self
        searchResultCollectioView.dataSource = self
        historyTableView.mainCellDelegate = self
        
        
        navigationItem.title = "Search"
        
        searchResultCollectioView.register(PortraitCell.self,
                                           forCellWithReuseIdentifier: PortraitCell.identifier)
        searchResultCollectioView.register(SearchCollectionReusableView.self,
                                           forSupplementaryViewOfKind: SearchCollectionReusableView.kind,
                                           withReuseIdentifier: SearchCollectionReusableView.identifier)
...
