...
    weak var delegate: TabBarControllerDelegate?
    var localNotification: NotificationManagerProtocol!
    
    // MARK: - Private Properties
    private var settingManager: SettingManagerProtocol!
    private let namesOfCells = [
        [("Thema", "moon"), ("Language", "globe"), ("Notification", "bell.badge")],
        [("Reviews", "exclamationmark.bubble"), ("About the App", "info.circle")]
    ]
    
    // MARK: - Lifecycle
    override func viewDidLoad() {
        super.viewDidLoad()
...
        tableView.separatorInset.left = 55
        view.addSubview(tableView)
    }
    
    private func setupNavBar() {
        let navBar = UINavigationBar(frame: CGRect(x: 20, y: -30, width: view.bounds.width, height: 100))
        let navItem = UINavigationItem(title: "Settings".localized)
        navBar.items = [navItem]
        navBar.prefersLargeTitles = true
        view.addSubview(navBar)
    }
    
    private func suspendApplication() {
...
